# CourseProject5

./: README.md  main.py  pyproject.toml
src/: DBClass.py  DBManager.py  HHParser.py  config.py  utils.py
