[tool.poetry]
name = "courseproject5"
version = "0.1.0"
description = "Курсова работа"
authors = ["vavil <vavilon164@yanex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
